# HLV-RAPS

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  _codeql_detected_source_root
.github/workflows/: ci.yml
build_api_demo/: CMakeCache.txt  Makefile  cmake_install.cmake  rest_api_demo
build_sil/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_sil/Testing/Temporary/: CTestCostData.txt
docs/: REST_API.md  TELEMETRY_DASHBOARD.md  architecture.md  operational_notes.md  sil_hil.md  verification.md
docs/contracts/: TELEMETRY_STORAGE_CONTRACT.md
examples/api_client/: CMakeLists.txt  README.md  api_client.py  rest_api_demo.cpp
examples/hil/: hil_main.cpp  hil_readiness_check.cpp  hil_rig_server.cpp
examples/hlv_demo/: hlv_rtos_demo.cpp
examples/sil/: sil_main.cpp
include/: PropulsionPhysicsEngine.hpp
include/apcu/: advanced_propulsion_control_unit.hpp
include/config/: raps_safety_limits.hpp
include/core/: raps_definitions.hpp
include/hlv/: hlv_constants.hpp  spacetime_modulation_types.hpp
include/itl/: itl_manager.hpp
include/platform/: platform_hal.hpp
include/raps/api/: api_snapshot.hpp  rest_api_server.hpp
include/raps/core/: raps_core_types.hpp  raps_definitions.hpp
include/raps/hil/: hil_config.hpp  hil_device_interface.hpp  hil_tcp_device.hpp
include/raps/hlv/: hlv_field_dynamics.hpp
include/raps/pdt/: hlv_pdt_engine.hpp
include/raps/platform/: rtos_mutex.hpp  sil_coverage_gates.hpp  sil_fault_injection.hpp  sil_fault_injection_config.hpp
include/raps/safety/: deterministic_safety_monitor.hpp  stability_indicator.hpp
include/raps/supervisor/: supervisor_failure_strings.hpp
include/raps/telemetry/: jsonl_sink.hpp  telemetry_event.hpp  telemetry_logger.hpp  telemetry_metadata.hpp  telemetry_ring_buffer.hpp  telemetry_run_directory.hpp  telemetry_sink.hpp
include/safety/: safety_monitor.hpp  state_sanitizer.hpp
include/supervisor/: redundant_supervisor.hpp
reference/: hlv_reference_integrator.hpp
reference/python/: hlv_governance_reference.py  hlv_math_stubs.py  itl_reference.py  raps_governor_hlv.py
src/api/: rest_api_server.cpp
src/common/: types.hpp
src/control/: pid_controller.hpp
src/hardware/: hardware_backend.hpp  reference_backend.cpp
src/hil/: hil_device_interface.cpp  hil_tcp_device.cpp
src/hlv/: artificial_gravity_control.hpp  capability_scaling.hpp  derived_gravity_model.hpp  derived_time_dilation_model.hpp  efficiency_and_displacement.hpp  field_coupling_stress_model.hpp  gravito_flux_control.hpp  power_and_resource_management.hpp  power_draw_model.hpp  resonance_detection.hpp  resonance_suppression.hpp  resource_consumption.hpp  spacetime_curvature_dynamics.hpp  spacetime_curvature_model.hpp  subspace_efficiency.hpp  subspace_efficiency_model.hpp  time_dilation_control.hpp  warp_field_control.hpp
src/itl/: itl_ailee_status.hpp  itl_command_events.hpp  itl_entry_hashing.hpp  itl_merkle_anchor_entry.hpp  itl_payload_sizing.hpp  itl_state_snapshot.hpp  merkle_root.hpp  merkle_utils.hpp
src/physics/: PropulsionPhysicsEngine.cpp  nominal_control.hpp  policy_to_control_input.hpp  propulsion_physics_engine.cpp
src/platform/: platform_hal.cpp  platform_hal_hil.cpp  sil_fault_injection.cpp
src/policy/: mission_policy.hpp
src/profiling/: perf_profiler.hpp
src/raps/: rollback_execution.hpp
src/safety/: ailee_confidence_classification.hpp  apcu_state_management_and_safety.hpp  rollback_store.hpp  stability_and_authority_metrics.hpp  state_hashing.hpp
src/supervisor/: prediction_mismatch_policy.hpp  supervisor_failure_strings.hpp
src/telemetry/: example_integration.cpp
tests/sil/: CMakeLists.txt  sil_assert.hpp  sil_config.hpp  sil_metric_expect.hpp  sil_metric_sink.cpp  sil_metric_sink.hpp  sil_runner.cpp  sil_safety_cases.hpp  sil_supervisor_tests.hpp  test_dsm_wnn.cpp  test_fault_injection.cpp  test_rollback_execution.cpp  test_stability_indicator.cpp  test_version.cpp
tests/sil/_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  raps_sil_fault_tests
tools/: telemetry_report.cpp
xamples/hil/: hil_main.cpp
(+1 files in other folders)
